Incorporate changes to report structure and code

--- a/report/harveyballs.tex
+++ b/report/harveyballs.tex
@@ -4,41 +4,45 @@
 
 \newcommand*\HVHi{
 \begin{tikzpicture}[y=0.80pt, x=0.8pt,yscale=-1, inner sep=0pt, outer sep=0pt]
-\path[cm={{0.08869315,0.0,0.0,0.08869315,(640.39144,689.00082)}},draw=cff0000,fill=cff0000,line
-  width=1.600pt] (100.0000,700.0000) circle (1.4111cm);
-\path[cm={{0.18748849,0.0,0.0,0.18748849,(630.42203,619.90688)}},draw=cff0000,fill=cffffff,line
-  width=1.600pt] (100.0000,700.0000) circle (0.2822cm);
+\path[cm={{0.13199701,0.0,0.0,0.13199701,(607.87024,656.47962)}},draw=black,fill=black,miter
+  limit=4.00,line width=0.606pt] (700.0000,100.0000) circle (1.4111cm);
 \end{tikzpicture}
 }
 
 \newcommand*\HHi{
 \begin{tikzpicture}[y=0.80pt, x=0.8pt,yscale=-1, inner sep=0pt, outer sep=0pt]
-\path[cm={{0.08869315,0.0,0.0,0.08869315,(640.39144,689.00082)}},draw=cff0000,fill=cff0000,line
-  width=1.600pt] (250.0000,700.0000) circle (1.4111cm);
-\path[fill=cffffff] (658.1301,751.0860)arc(179.942:0.058:4.435) -- cycle;
-
+\path[cm={{0.13199701,0.0,0.0,0.13199701,(607.87024,656.47962)}},draw=black,fill=black,miter
+  limit=4.00,line width=0.606pt] (550.0000,100.0000) circle (1.4111cm);
+\path[fill=cffffff,miter limit=4.00,line width=0.080pt] (680.4686,669.6793) --
+  (673.8688,669.6793)arc(180.000:270.000:6.600) -- cycle;
+\path[fill=black] (673.8687,669.6793)arc(179.978:0.022:6.600) -- cycle;
 \end{tikzpicture}
 }
 
 \newcommand*\HMed{
 \begin{tikzpicture}[y=0.80pt, x=0.8pt,yscale=-1, inner sep=0pt, outer sep=0pt]
-\path[cm={{0.08869315,0.0,0.0,0.08869315,(640.39144,689.00082)}},draw=black,fill=cffffff,line
-  width=1.600pt] (400.0000,700.0000) circle (1.4111cm);
+\path[cm={{0.13199701,0.0,0.0,0.13199701,(607.87024,656.47962)}},draw=black,fill=black,miter
+  limit=4.00,line width=0.606pt] (400.0000,100.0000) circle (1.4111cm);
+\path[fill=cffffff,miter limit=4.00,line width=0.080pt] (660.6690,669.6793) --
+  (654.0692,669.6793)arc(180.000:270.000:6.600) -- cycle;
+\path[fill=cffffff,miter limit=4.00,line width=0.080pt] (660.6690,669.6793) --
+  (654.0692,669.6793)arc(180.000:90.000:6.600) -- cycle;
 \end{tikzpicture}
 }
 
 
 \newcommand*\HLow{
 \begin{tikzpicture}[y=0.80pt, x=0.8pt,yscale=-1, inner sep=0pt, outer sep=0pt]
-\path[cm={{0.08869315,0.0,0.0,0.08869315,(640.39144,689.00082)}},draw=black,fill=cffffff,line
-  width=1.600pt] (550.0000,700.0000) circle (1.4111cm);
-\path[fill=black] (684.7380,751.0860)arc(179.942:0.058:4.435) -- cycle;
+\path[cm={{0.13199701,0.0,0.0,0.13199701,(607.87024,656.47962)}},draw=black,fill=cffffff,miter
+  limit=4.00,line width=0.606pt] (250.0000,100.0000) circle (1.4111cm);
+\path[fill=black,miter limit=4.00,line width=0.000pt] (640.8695,669.6793) --
+  (640.8695,663.0795)arc(270.000:360.000:6.600) -- cycle;
 \end{tikzpicture}
 }
 
 \newcommand*\HVLow{
 \begin{tikzpicture}[y=0.80pt, x=0.8pt,yscale=-1, inner sep=0pt, outer sep=0pt]
-\path[cm={{0.08869315,0.0,0.0,0.08869315,(640.39144,689.00082)}},draw=black,fill=black,line
-  width=1.600pt] (700.0000,700.0000) circle (1.4111cm);
+\path[cm={{0.13199701,0.0,0.0,0.13199701,(607.87024,656.47962)}},draw=black,fill=cffffff,miter
+  limit=4.00,line width=0.606pt] (100.0000,100.0000) circle (1.4111cm);
 \end{tikzpicture}
 }
