Miscellaneous update rollup

--- a/report/rendered-tables-only.tex
+++ b/report/rendered-tables-only.tex
@@ -1,6 +1,6 @@
-%!TEX TS-program = lualatex
+%!TEX TS-program = LuaLaTeX
 %!TEX encoding = UTF-8 Unicode
-%! program = lualatex
+%! program = LuaLaTeX
 
 %%%%% DOCUMENT SETUP %%%%%
 % Document class derives from "memoir" class
