Additional format changes

--- a/report/rendered-tables-only.tex
+++ b/report/rendered-tables-only.tex
@@ -5,7 +5,7 @@
 %%%%% DOCUMENT SETUP %%%%%
 % Document class derives from "memoir" class
 %\documentclass[10pt, letterpaper, final, twoside, onecolumn, article]{memoir}% For most reports; chapters look like section headers
-\documentclass[10pt, legalpaper, final, oneside, onecolumn, landscape]{memoir}% For book-like reports with separate chapters
+\documentclass[10pt, legalpaper, final, oneside, onecolumn, landscape, article]{memoir}% For book-like reports with separate chapters
 
 % Useful packages
 %\usepackage{psrc}
@@ -70,175 +70,38 @@
 %%%% Enter landscape mode to make room for wide tables
 \pagestyle{plain}
 
-\chapter{Z-Scored Tables}
-%Symbols reflect z-scored project totals
-
-\clearpage
-%%%% Non-motorized projects Z
-{\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
-
-\caption{Non-motorized projects} \\
-
-\toprule
-
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
-\endfirsthead
-
-
-\caption{Non-motorized projects continued\ldots} \\
-\toprule
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
-
-\endhead
-
-\bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
-\endfoot
-
-\bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
-\endlastfoot
-
-\input{tables/tallies_z_nonmotor.tex}
-
-
-
-\end{longtable}}
-
- 
- %%%%%% Transit
- \clearpage
- 
-{\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
- 
- \caption{Transit projects} \\
- 
- \toprule
- 
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- \endfirsthead
- 
- 
- \caption{Transit projects continued\ldots} \\
- \toprule
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- 
- \endhead
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endfoot
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endlastfoot
- 
- \input{tables/tallies_z_transit.tex}
- 
- \end{longtable}}
- 
- 
- 
- %%%%%% Arterial
- \clearpage
- 
-{\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
- 
- \caption{Arterial projects} \\
- 
- \toprule
- 
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- \endfirsthead
- 
- \caption{Arterial projects continued\ldots} \\
- \toprule
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- 
- \endhead
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endfoot
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endlastfoot
- 
- \input{tables/tallies_z_arterial.tex}
- 
- \end{longtable}}
- 
- 
- %%%%%% State routes
- \clearpage
- 
-{\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
- 
- \caption{State Routes projects} \\
- 
- \toprule
- 
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- \endfirsthead
- 
- \caption{State Routes projects continued\ldots} \\
- \toprule
-ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
- 
- \endhead
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endfoot
- 
- \bottomrule
-\multicolumn{15}{r}{\HVHi = Largest benefit, \HHi = Larger benefit, \HMed = Average benefit, \HLow = Smaller benefit, \HVLow = Smallest benefit}
- \endlastfoot
- 
- \input{tables/tallies_z_stateroute.tex}
- 
- \end{longtable}}
- 
- 
- 
  
  %%%%
  %%%% Numerically scored tables
  %%%%
  
- \chapter{Absolute Point Values Tables}
- 
- 
+ % Adjust table row spacing as needed
+ \renewcommand{\arraystretch}{3}
  
  \clearpage
  %%%% Non-motorized projects Z
 {\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
+\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
  
- \caption{Non-motorized projects} \\
+ \caption{Bicycle/Pedestrian projects} \\
  
  \toprule
  
 ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
  \endfirsthead
  
- \caption{Non-motorized projects continued\ldots} \\
+ \caption{Bicycle/Pedestrian projects continued\ldots} \\
  \toprule
 ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
  
  \endhead
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endfoot
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endlastfoot
  
  \input{tables/tallies_5_nonmotor.tex}
@@ -250,7 +113,7 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \clearpage
  
 {\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
+\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
  
  \caption{Transit projects} \\
  
@@ -266,11 +129,11 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \endhead
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endfoot
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endlastfoot
  
  \input{tables/tallies_5_transit.tex}
@@ -283,7 +146,7 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \clearpage
  
 {\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
+\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
  
  \caption{Arterial projects} \\
  
@@ -300,11 +163,11 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \endhead
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endfoot
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endlastfoot
  
  \input{tables/tallies_5_arterial.tex}
@@ -316,9 +179,9 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \clearpage
  
 {\scriptsize
-\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
+\begin{longtable}{>{\raggedright\arraybackslash}p{1.2pc}>{\raggedright\arraybackslash}p{5.5pc}>{\raggedright\arraybackslash}p{30.5pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.5pc}>{\raggedright\arraybackslash}p{2.2pc}>{\raggedright\arraybackslash}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.0pc}>{\raggedright\arraybackslash\bfseries}p{2.5pc}>{\raggedright\arraybackslash}p{4.3pc}}
  
- \caption{State Routes projects} \\
+ \caption{Highway projects} \\
  
  \toprule
  
@@ -326,18 +189,18 @@ ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget
  \endfirsthead
  
  
- \caption{State Routes projects continued\ldots} \\
+ \caption{Highway projects continued\ldots} \\
  \toprule
 ID	&	Sponsor	&	Description  & Air Quality & Freight & Jobs & Multi-Modal & Puget Sound Land and Water & Safety and System Security & Social Equity and Opportunity & Support for Centers & Travel & Total Score & Cost (millions) & Plan Section\\ \midrule
  
  \endhead
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endfoot
  
  \bottomrule
- \multicolumn{14}{r}{Individual Scorecards: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc} Total Scores: \HVHi = 74-90 points, \HHi = 56-73 points, \HMed = 38-55 points, \HLow = 19-37 points, \HVLow = 0-18 points}
+ & & &\multicolumn{10}{c}{Scores: \HVHi = 9-10 points, \HHi = 7-8 points, \HMed = 5-6 points, \HLow = 3-4 points, \HVLow = 0-2 points \hspace{2pc}}
  \endlastfoot
  
  \input{tables/tallies_5_stateroute.tex}
